two more examples

--- a/packages/examples/devtools/index.html
+++ b/packages/examples/devtools/index.html
@@ -175,6 +175,9 @@
         <ul class="todo-list" id="todoList"></ul>
 
         <p>Active todos (computed): <span class="computed-value" id="activeTodoCount">0</span></p>
+
+        <div id="todoStats" style="background: #e7f3ff; padding: 0.75rem; border-radius: 4px; margin: 1rem 0; font-size: 14px;"></div>
+
         <button onclick="window.todoList.toggleAll()">Toggle All</button>
         <button onclick="window.batchedUpdates()">Batch Updates Demo</button>
       </div>
