--- a/packages/examples/canvas/index.html
+++ b/packages/examples/canvas/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rimitive Canvas Example</title>
+    <title>One Component, Two Renderers - Rimitive Demo</title>
     <style>
       * {
         box-sizing: border-box;
@@ -12,104 +12,270 @@
       }
 
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        background: #1a1a2e;
-        color: #eee;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        background: #0f0f23;
+        color: #ccc;
         min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         padding: 2rem;
       }
 
-      h1 {
-        margin-bottom: 0.5rem;
-        color: #fff;
+      .app {
+        max-width: 900px;
+        margin: 0 auto;
       }
 
-      .subtitle {
-        color: #888;
+      .header {
+        text-align: center;
         margin-bottom: 2rem;
       }
 
-      .app {
+      h1 {
+        color: #fff;
+        font-size: 2rem;
+        font-weight: 600;
+        margin-bottom: 0.5rem;
+      }
+
+      .subtitle {
+        color: #666;
+        font-size: 1rem;
+      }
+
+      /* Side-by-side renders */
+      .renders {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        margin-bottom: 2rem;
+      }
+
+      @media (max-width: 850px) {
+        .renders {
+          grid-template-columns: 1fr;
+        }
+      }
+
+      .render-section {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 1rem;
       }
 
-      .canvas-container {
-        background: #16213e;
-        border-radius: 12px;
-        padding: 1rem;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      .render-label {
+        font-size: 0.75rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: #666;
+        font-weight: 600;
+      }
+
+      .render-container {
+        background: #0f0f23;
+        border-radius: 16px;
+        padding: 0;
+        box-shadow: 0 4px 24px rgba(0, 0, 0, 0.4);
+        overflow: hidden;
       }
 
       canvas {
         display: block;
+      }
+
+      /* DOM card styles */
+      .dom-container {
+        background: transparent;
+        box-shadow: none;
+      }
+
+      .share-card {
+        position: relative;
+        background: #1a1a2e;
+        border-radius: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        overflow: hidden;
+      }
+
+      .share-card-avatar {
+        position: absolute;
         border-radius: 8px;
+        object-fit: cover;
       }
 
-      .controls {
-        margin-top: 1.5rem;
+      .share-card-heading {
+        position: absolute;
+        color: #fff;
+        font-size: 24px;
+        font-weight: 600;
+      }
+
+      .share-card-subheading {
+        position: absolute;
+        color: #888;
+        font-size: 16px;
+      }
+
+      .share-card-stat {
+        position: absolute;
         display: flex;
-        gap: 1rem;
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
+        gap: 4px;
       }
 
-      button {
-        padding: 0.75rem 1.5rem;
-        background: #e94560;
+      .share-card-stat-value {
+        color: #fff;
+        font-size: 28px;
+        font-weight: 600;
+      }
+
+      .share-card-stat-label {
+        color: #666;
+        font-size: 14px;
+      }
+
+      .share-card-badge {
+        position: absolute;
+        color: #444;
+        font-size: 12px;
+      }
+
+      .download-btn {
+        padding: 0.5rem 1.5rem;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
         border: none;
         border-radius: 6px;
         cursor: pointer;
-        font-size: 1rem;
+        font-size: 0.875rem;
         font-weight: 500;
         transition: all 0.2s;
       }
 
-      button:hover {
-        background: #ff6b6b;
+      .download-btn:hover {
         transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
       }
 
-      button:active {
-        transform: translateY(0);
+      /* Form */
+      .form-section {
+        background: rgba(255, 255, 255, 0.03);
+        border-radius: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.05);
+        padding: 1.5rem;
+        margin-bottom: 2rem;
       }
 
-      button.secondary {
-        background: #0f3460;
-      }
-
-      button.secondary:hover {
-        background: #1a4f8a;
-      }
-
-      .info {
-        margin-top: 1.5rem;
-        padding: 1rem;
-        background: rgba(255, 255, 255, 0.05);
-        border-radius: 8px;
+      .form-intro {
         font-size: 0.9rem;
-        color: #aaa;
-        max-width: 600px;
+        color: #888;
+        margin-bottom: 1rem;
         text-align: center;
       }
 
-      .info code {
-        background: rgba(255, 255, 255, 0.1);
-        padding: 0.2rem 0.4rem;
-        border-radius: 4px;
-        font-family: 'SF Mono', Monaco, monospace;
+      .form-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+      }
+
+      @media (max-width: 700px) {
+        .form-grid {
+          grid-template-columns: 1fr 1fr;
+        }
+      }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      label {
+        font-size: 0.75rem;
+        color: #888;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+      }
+
+      input {
+        padding: 0.6rem 0.8rem;
+        background: #1a1a2e;
+        border: 1px solid #333;
+        border-radius: 6px;
+        color: #fff;
+        font-size: 0.9rem;
+        transition: border-color 0.2s;
+      }
+
+      input:focus {
+        outline: none;
+        border-color: #667eea;
+      }
+
+      input[type="number"] {
+        -moz-appearance: textfield;
+      }
+
+      input[type="number"]::-webkit-inner-spin-button,
+      input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+      }
+
+      .input-with-prefix {
+        display: flex;
+      }
+
+      .prefix {
+        padding: 0.6rem;
+        background: #16162a;
+        border: 1px solid #333;
+        border-right: none;
+        border-radius: 6px 0 0 6px;
+        color: #666;
+        font-size: 0.9rem;
+      }
+
+      .input-with-prefix input {
+        border-radius: 0 6px 6px 0;
+        flex: 1;
+        min-width: 0;
+      }
+
+      /* Info */
+      .info {
+        padding: 1.5rem;
+        background: rgba(255, 255, 255, 0.02);
+        border-radius: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.05);
+      }
+
+      .info p {
+        font-size: 0.9rem;
+        line-height: 1.6;
+        color: #888;
+      }
+
+      .info p + p {
+        margin-top: 0.75rem;
+      }
+
+      .info strong {
+        color: #a5b4fc;
+      }
+
+      .info a {
+        color: #667eea;
+        text-decoration: none;
+      }
+
+      .info a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
   <body>
-    <!-- Single mount point - entire app rendered here -->
     <div id="root"></div>
-
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
